# Automated-Cardiac-Scanning-System-for-Ultrasonic-Robots

./: .gitignore  README.md  git_commit_history.txt
src/calibration_data/: ost.txt  ost.yaml
src/end_control_node/: CMakeLists.txt  methods.txt  package.xml
src/end_control_node/src/: cartesian_rel_action_client.cpp  cartesian_rel_action_server.cpp  end_control_service.cpp  probe_control_service.cpp
src/end_control_node/srv/: EndControl.srv  ProbeControl.srv
src/end_control_node/test/: cartesian_rel_action_client_test.cpp
src/obstacle_node/: CMakeLists.txt  README.md  package.xml
src/obstacle_node/src/: obstacle_service.cpp  obstacle_test_1.cpp
src/obstacle_node/srv/: ManageMaterial.srv  ManageObstacle.srv
src/opencv_description/: package.xml  setup.cfg  setup.py
src/opencv_description/msg/: match_points.msg
src/opencv_description/opencv_description/: ikine_test_1.py  joint_trajectory_test_1.py  open3d_normals.py  open3d_test_unit_1.py  pointcloud2_test.py  pointcloud_transform.py  pointcloud_transform_2.py
src/opencv_description/pointcloud_output/: cloud_with_normals.pcd  output.pcd  output.ply  output.xyz
src/opencv_description/test/: open3d_test_unit_2.py  opencv_calibration_test.py  opencv_match_test_unit.py
src/pcl/: CMakeLists.txt  package.xml
src/pcl/src/: pcl_filter_volex.cpp  pcl_subscriber_node.cpp  pointcloud_transform.cpp
src/pcl_node/: CMakeLists.txt  package.xml
src/pcl_node/point_output/: filtered_cloud.pcd
src/pcl_node/src/: pointcloud_normal_estimator.cpp  pointcloud_transform.cpp
src/pcl_node/test/: normal_radius_test.cpp  view_point_cloud_normals.cpp  voxel_size_test.cpp
src/pcl_node/test_results/: normal_radius_benchmark_results.csv  voxel_benchmark_results.csv
src/pcl_node/view/: normal_radius.py  voxel_size.py
src/planning_node/: CMakeLists.txt  README.md  package.xml
src/planning_node/action/: MoveEndLinear.action  MoveEndToAbsPos.action  MoveEndToRelPos.action  WaypointMotion.action
src/planning_node/include/planning_node/: README.md  action_server_base.hpp  waypoint_types.hpp
src/planning_node/msg/: Waypoint.msg
src/planning_node/src/: cartesian_abs_action_client.cpp  cartesian_abs_action_server.cpp  cartesian_linear_action_server.cpp  cartesian_rel_action_client.cpp  cartesian_rel_action_server.cpp  match_point_converter.cpp  moveit_cartesian_test_1.cpp  moveit_cartesian_test_2.cpp  moveit_cartesian_test_3.cpp  moveit_example_test.cpp  moveit_obstacle_avoid_1.cpp  pose_publisher.cpp  trajectory_monitor.cpp  waypoint_action_server.cpp
src/planning_node/srv/: GlobPlanningSetting.srv
src/planning_node/test/: cartesian_abs_action_client_test.cpp  cartesian_linear_action_client_test.cpp  cartesian_rel_action_client_test.cpp  ik_planning_test.cpp  joint_smooth.cpp  joint_smooth_2.cpp  moveit_cartesian_test.cpp  moveit_cartesian_test_2.cpp  moveit_obstacle_avoid_test.cpp  pose_publisher.cpp  trajectory_smooth_test.cpp  trajectory_smooth_test_backup_1.cpp  waypoint_action_client_test.cpp  waypoint_action_client_test_1.cpp  waypoint_action_client_test_2.cpp  waypoint_action_client_test_3.cpp  waypoint_action_client_test_4.cpp  waypoint_action_client_test_5.cpp
src/planning_node/test_results/: KDL_RRTConnect_test_results_1.csv  KDL_RRTConnect_test_results_2.csv  KDL_RRTConnect_test_results_3.csv  KDL_RRTConnect_test_results_4.csv  KDL_RRTConnect_test_results_5.csv  TRAC_IK_BiTRRT_test_results_1.csv  TRAC_IK_BiTRRT_test_results_2.csv  TRAC_IK_BiTRRT_test_results_3.csv  TRAC_IK_BiTRRT_test_results_4.csv  TRAC_IK_BiTRRT_test_results_5.csv  arm_trajectory.csv  joint_states.csv  joint_states_2.csv  smoothing_chart_data_1.csv  smoothing_chart_data_2.csv  smoothing_chart_data_3.csv  smoothing_chart_data_4.csv  smoothing_chart_data_5.csv  smoothing_test_results_1.csv  smoothing_test_results_2.csv  smoothing_test_results_3.csv  smoothing_test_results_4.csv  smoothing_test_results_5.csv
src/planning_node/test_results/cubic_polynomial_joint_data/: joint_trajectory_test_1.csv  joint_trajectory_test_2.csv  joint_trajectory_test_3.csv  joint_trajectory_test_4.csv  joint_trajectory_test_5.csv  summary_test_1.csv  summary_test_2.csv  summary_test_3.csv  summary_test_4.csv  summary_test_5.csv  visualization_data.csv
src/planning_node/test_results/nurbs_joint_data/: joint_trajectory_test_1.csv  joint_trajectory_test_2.csv  joint_trajectory_test_3.csv  joint_trajectory_test_4.csv  joint_trajectory_test_5.csv  summary_test_1.csv  summary_test_2.csv  summary_test_3.csv  summary_test_4.csv  summary_test_5.csv  visualization_data.csv
src/planning_node/view/: ik.py  joints.py  joints_2.py  joints_3.py  joints_4.py  planning.py  smooth.py
src/russ_description/: package.xml  setup.cfg  setup.py
src/russ_description/config/: joint_names_russ.yaml
src/russ_description/meshes/: base_link.STL  camera_link.STL  probe_link.STL  upperarm_link.STL  wrist1_link.STL  wrist2_link.STL
src/russ_description/urdf/: russ.csv  russ.urdf  russ_man.urdf
src/russ_description/world/: Painter2_world.world  Painter2_world_middle.world  fishbot.world  my_POPY_world.world  my_chess_world.world  my_chess_world_2.world  my_chess_world_3.world  my_chess_world_4.world  my_chess_world_5.world
src/russ_man_moveit_node/: .setup_assistant  CMakeLists.txt  package.xml
src/russ_man_moveit_node/config/: initial_positions.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  russ.ros2_control.xacro  russ.srdf  russ.urdf.xacro
src/russ_man_moveit_node/launch/: demo.launch.py  gazebo.launch.py  move_group.launch.py  moveit_rviz.launch.py  my_moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  startup.launch.py  static_virtual_joint_tfs.launch.py  (+1 more)
src/russ_moveit_node/: .setup_assistant  CMakeLists.txt  package.xml
src/ur/: .setup_assistant  CMakeLists.txt  package.xml
src/ur_description/: package.xml  setup.cfg  setup.py
src/yolo_node/: package.xml  setup.py
杂项/: available_space.txt  ik_test.sh  my_send_goal.sh  tf.txt
杂项/2025-03-27-13-40-01/: 2025-03-27-13-40-01_0.db3
(+107 files in other folders)
